marie.css
/* ... */
@media only screen and (max-width: 100vh) {
  #slidenoteeditor{
    /* Bug in Chromium: https://bugs.chromium.org/p/chromium/issues/detail?id=843584
    Calc in Media Queries accepts no combination of different units. Until it 
    gets resolved, font-size must remain dependant of only one unit.
    font-size: calc(0.5rem + 1vw);*/
    font-size: 1.7407vw;
    grid-template-areas: "buttonleft noteinfoarea buttonright" "editor editor editor" "editor editor editor";
    grid-template-columns: calc(70/377*100vw) auto calc(67/377*100vw);
    grid-template-rows: calc(58/377*100vw) calc(74/377*100vw) auto;
  }


  /*general*/
  /*-------*/

    #buttonarearightbutton, #optionareabutton{
      display: unset;
      background-color: hotpink;
      border-radius: 50%;
    }


    div#toolbar, div#imagegallery.active, #menusearchbox, #searchbuttonarea{
      grid-column-start: 1;
      grid-column-end: 4;
      grid-row-start: 1;
      grid-row-end: 3;
    }


    #shadowelleft, #rahmenright, #searchbuttonarea{
      display: none;
    }

    .closebutton/*#buttonarearightclose, #optionareaclose, #toolbarclose*/{
      display: unset;
      width: calc(34/377*100vw);
      left: calc(326/377*100vw);
      top: calc(15/377*100vw);
    }

  /*noteinfoarea*/
  /*------------*/

    #noteinfoarea{
      grid-template-columns: 1fr 3fr;
      grid-template-rows: 1fr auto auto;
      justify-self: stretch;
    }

    #noteinfoarea button{
      font-size: 1em;
    }

    #cloud{
      grid-row: 2;
      justify-self: center;
    }

    #loadnote{
      grid-column: 2;
      justify-self: start;
    }

    #outlet{
      grid-column: 2;
    }

    #outlineblock{
      grid-template-rows: auto;
      grid-template-columns: auto auto 1fr;
    }
    #outlineblock div{
      margin-right: 0.5em;
    }

    #outlineblock div:after{
      content: ",";
    }

    #outlineblock div+div+div:after{
      content: "";
    }

  /*editorblock*/
  /*-----------*/

    #editorblock{
      margin-left: calc(40/377*100vw);
    }


  /*buttonarearight*/
  /*---------------*/

    #buttonarearight{
      grid-area: unset;
      grid-column-start: 1;
      grid-column-end: 4;
      grid-row: 1;
      display: none;
    }

    #buttonarearight.active{
      display: unset;
    }

    #buttonarearightbutton{
      grid-column: 1;
      grid-row: 1;  
    }

    #searchbutton{
      width: calc(42/377*100vw);
      left: calc(20/377*100vw);
      top: calc(3/377*100vw);
    }

    #toolbarbutton{
      width: calc(62/377*100vw);
      left: calc(241/377*100vw);
      top: calc(3/377*100vw);
    }

    #imagegallerybutton{
      width: calc(53/377*100vw);
      left: calc(82/377*100vw);
      top: calc(2/377*100vw);
    }

    #historyBackButton{
      width: calc(49/377*100vw);
      left: calc(181/377*100vw);
      top: calc(5/377*100vw);
    }

    #historyForwardButton{
      width: calc(33/377*100vw);
      left: calc(153/377*100vw);
      top: calc(20/377*100vw);
    }


  /*optionarea*/
  /*----------*/

    #optionarea{
      grid-area: unset;
      grid-column: 1 / 4;
      grid-row: 1;
      display:none;
      margin-top: unset;
      background-color: var(--lvl1-color);
    }

    #optionarea.active{
      display: grid;
      padding-left: calc(70/377*100vw);
      grid-template-columns: 1fr 1fr 1fr calc(67/377*100vw);
    }

    #optionarea button{
      font-size: 2em;
    }

    #optionareabutton{
      grid-column: 3;
      grid-row: 1;  
    }

  /*sidebarcontainer*/
  /*----------------*/

  #sidebarcontainer{
    margin-right: calc(30/377*100vw);
    grid-column: 1;
    grid-row-start: 2;
    grid-row-end: 4;
  }

  /*menus*/
  /*-----*/

    div#toolbar{
      margin-top: 0;
      overflow: auto;
    }

    #toolbarclose{
      position: fixed;
    }

    #toolbarclose img{
      display: 
    }


    #menucloud, #menuimportexport, #menupublish{
      grid-column: 1 /last;
      grid-row: 1 / last;
    }


  /*#noteinfoarea, #buttonarearight, #imagegallery, #optionarea{
    grid-area: unset;
    position: fixed;
  }*/

}

